--- a/.github/workflows/release-page.yaml
+++ b/.github/workflows/release-page.yaml
@@ -9,8 +9,12 @@ jobs:
   tagged-release:
     name: 📑 Release Page
     runs-on: "ubuntu-latest"
-
+    permissions:
+      contents: write
     steps:
+      - name: 📦 Checkout repository
+        uses: actions/checkout@v4
+
       - name: 📑 Release Page
         uses: ncipollo/release-action@v1
         with:
